--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
        
     <title>React App</title>
     <link rel="stylesheet" href="../src/index.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
