--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="./favicon.ico" />
        
-    <title>React App</title>
+    <title>Netflix</title>
     <link rel="stylesheet" href="../src/index.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
